--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">ski.ski</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -46,13 +46,28 @@
     </form>
   </div>
 </nav>
-    <div class="jumbotron">
-      <h1 class="display-4">Hello, world!</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <hr class="my-4">
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+
+
+    <div class="card bg-dark text-black-50">
+  <img class="card-img" style="max-width: 100%; min-width: 650px;" src="joshua-reddekopp-217223-unsplash.jpg" alt="Card image">
+  <div class="card-img-overlay">
+    <h1 class="display-4">Plan your trip <span style="display: inline-block"> to Vail</span></h1>
+    <form>
+        <p>When will you be in Vail?</p>
+  <div class="form-row">
+    <div class="form-group col-md-4">
+      <label for="exampleInputEmail1">Arriving</label>
+      <input type="Date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
     </div>
+    <div class="form-group col-md-4">
+      <label for="exampleInputPassword1">Leaving</label>
+      <input type="Date" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+  </div>
+</div>
 
 <div class="card-group">
   <div class="card">
